--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -366,17 +366,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="a78dba5ac50e4f5c9bf56a7aa06904dd-6120f271ef2e484c92ecfacadbf4cabb" name="a78dba5ac50e4f5c9bf56a7aa06904dd" class="tab" checked><label for="a78dba5ac50e4f5c9bf56a7aa06904dd-6120f271ef2e484c92ecfacadbf4cabb" >General</label>
-<input type="radio" id="a78dba5ac50e4f5c9bf56a7aa06904dd-f4ba4f5d21b24adbb45f73266e243a95" name="a78dba5ac50e4f5c9bf56a7aa06904dd" class="tab" ><label for="a78dba5ac50e4f5c9bf56a7aa06904dd-f4ba4f5d21b24adbb45f73266e243a95" >Startup</label>
-<input type="radio" id="a78dba5ac50e4f5c9bf56a7aa06904dd-2dc5deaf56b2403984f182f18733e116" name="a78dba5ac50e4f5c9bf56a7aa06904dd" class="tab" ><label for="a78dba5ac50e4f5c9bf56a7aa06904dd-2dc5deaf56b2403984f182f18733e116" >Android</label>
-<input type="radio" id="a78dba5ac50e4f5c9bf56a7aa06904dd-0640ec24ad924fdb8ee8c31ce3973d14" name="a78dba5ac50e4f5c9bf56a7aa06904dd" class="tab" ><label for="a78dba5ac50e4f5c9bf56a7aa06904dd-0640ec24ad924fdb8ee8c31ce3973d14" >iOS</label>
+<input type="radio" id="f340a2004f4042dc88c1129c2464f2c9-5bc533e3a41e4aebba34eb3b0e137276" name="f340a2004f4042dc88c1129c2464f2c9" class="tab" checked><label for="f340a2004f4042dc88c1129c2464f2c9-5bc533e3a41e4aebba34eb3b0e137276" >General</label>
+<input type="radio" id="f340a2004f4042dc88c1129c2464f2c9-54ea0fa0a5104d3eb6645cd4abf0ac35" name="f340a2004f4042dc88c1129c2464f2c9" class="tab" ><label for="f340a2004f4042dc88c1129c2464f2c9-54ea0fa0a5104d3eb6645cd4abf0ac35" >Startup</label>
+<input type="radio" id="f340a2004f4042dc88c1129c2464f2c9-5aaffe301d244faba6afefcafe6df1a3" name="f340a2004f4042dc88c1129c2464f2c9" class="tab" ><label for="f340a2004f4042dc88c1129c2464f2c9-5aaffe301d244faba6afefcafe6df1a3" >Android</label>
+<input type="radio" id="f340a2004f4042dc88c1129c2464f2c9-c6e494dbdede44caadb3ebaa6fbbe835" name="f340a2004f4042dc88c1129c2464f2c9" class="tab" ><label for="f340a2004f4042dc88c1129c2464f2c9-c6e494dbdede44caadb3ebaa6fbbe835" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -485,7 +488,7 @@ public class BeaconRanging
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
