--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -366,16 +366,19 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="a1711ff6dbea4c199a42db3f778aecfe-e68faeb4a4cb4e62a618468cc9029005" name="a1711ff6dbea4c199a42db3f778aecfe" class="tab" checked><label for="a1711ff6dbea4c199a42db3f778aecfe-e68faeb4a4cb4e62a618468cc9029005" >General</label>
-<input type="radio" id="a1711ff6dbea4c199a42db3f778aecfe-943337e01e1047728b4254172fd7628e" name="a1711ff6dbea4c199a42db3f778aecfe" class="tab" ><label for="a1711ff6dbea4c199a42db3f778aecfe-943337e01e1047728b4254172fd7628e" >Startup</label>
-<input type="radio" id="a1711ff6dbea4c199a42db3f778aecfe-807a80bb80d94598af585adcc3ac1e00" name="a1711ff6dbea4c199a42db3f778aecfe" class="tab" ><label for="a1711ff6dbea4c199a42db3f778aecfe-807a80bb80d94598af585adcc3ac1e00" >Android</label>
-<input type="radio" id="a1711ff6dbea4c199a42db3f778aecfe-b46bf21b37634626bf8a6e0c5adc8db1" name="a1711ff6dbea4c199a42db3f778aecfe" class="tab" ><label for="a1711ff6dbea4c199a42db3f778aecfe-b46bf21b37634626bf8a6e0c5adc8db1" >iOS</label>
+<input type="radio" id="a3991bb559284296bbf1b18f7deedbde-2ccf71039c2643c9a309d1cc35ad6dfe" name="a3991bb559284296bbf1b18f7deedbde" class="tab" checked><label for="a3991bb559284296bbf1b18f7deedbde-2ccf71039c2643c9a309d1cc35ad6dfe" >General</label>
+<input type="radio" id="a3991bb559284296bbf1b18f7deedbde-2475af7e707443a1880a20fe6437fb08" name="a3991bb559284296bbf1b18f7deedbde" class="tab" ><label for="a3991bb559284296bbf1b18f7deedbde-2475af7e707443a1880a20fe6437fb08" >Startup</label>
+<input type="radio" id="a3991bb559284296bbf1b18f7deedbde-fe1214f486a441ae88dc5f8ceb6c9c22" name="a3991bb559284296bbf1b18f7deedbde" class="tab" ><label for="a3991bb559284296bbf1b18f7deedbde-fe1214f486a441ae88dc5f8ceb6c9c22" >Android</label>
+<input type="radio" id="a3991bb559284296bbf1b18f7deedbde-de3a2263b50b4ef9baa4dacd450faf9f" name="a3991bb559284296bbf1b18f7deedbde" class="tab" ><label for="a3991bb559284296bbf1b18f7deedbde-de3a2263b50b4ef9baa4dacd450faf9f" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
@@ -453,7 +456,7 @@ services.UseBleHosting();
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
