--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -366,17 +366,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d47361219292495e80aba899f4760694-261948bdb1b649b2b189f6f5411620be" name="d47361219292495e80aba899f4760694" class="tab" checked><label for="d47361219292495e80aba899f4760694-261948bdb1b649b2b189f6f5411620be" >General</label>
-<input type="radio" id="d47361219292495e80aba899f4760694-078df1218f664afcaa9daa71d1079bc1" name="d47361219292495e80aba899f4760694" class="tab" ><label for="d47361219292495e80aba899f4760694-078df1218f664afcaa9daa71d1079bc1" >Startup</label>
-<input type="radio" id="d47361219292495e80aba899f4760694-3982b93719c4448e9f1f125e22cac6c2" name="d47361219292495e80aba899f4760694" class="tab" ><label for="d47361219292495e80aba899f4760694-3982b93719c4448e9f1f125e22cac6c2" >Android</label>
-<input type="radio" id="d47361219292495e80aba899f4760694-1de49579786b4ad19c281158248473ec" name="d47361219292495e80aba899f4760694" class="tab" ><label for="d47361219292495e80aba899f4760694-1de49579786b4ad19c281158248473ec" >iOS</label>
-<input type="radio" id="d47361219292495e80aba899f4760694-f4354fc6b23340f6a0c7c3a553a2a86e" name="d47361219292495e80aba899f4760694" class="tab" ><label for="d47361219292495e80aba899f4760694-f4354fc6b23340f6a0c7c3a553a2a86e" >Windows</label>
+<input type="radio" id="1ad7b9e4fc7f4c32b60db48d93044ae8-432e3c6059a640c5bc2ee092226ec01b" name="1ad7b9e4fc7f4c32b60db48d93044ae8" class="tab" checked><label for="1ad7b9e4fc7f4c32b60db48d93044ae8-432e3c6059a640c5bc2ee092226ec01b" >General</label>
+<input type="radio" id="1ad7b9e4fc7f4c32b60db48d93044ae8-edb895ba329549228374a03ce224274c" name="1ad7b9e4fc7f4c32b60db48d93044ae8" class="tab" ><label for="1ad7b9e4fc7f4c32b60db48d93044ae8-edb895ba329549228374a03ce224274c" >Startup</label>
+<input type="radio" id="1ad7b9e4fc7f4c32b60db48d93044ae8-3627f7e9b7df4e9797fc0c326334d3b7" name="1ad7b9e4fc7f4c32b60db48d93044ae8" class="tab" ><label for="1ad7b9e4fc7f4c32b60db48d93044ae8-3627f7e9b7df4e9797fc0c326334d3b7" >Android</label>
+<input type="radio" id="1ad7b9e4fc7f4c32b60db48d93044ae8-20e6b5863e114d838459f534ff7d583c" name="1ad7b9e4fc7f4c32b60db48d93044ae8" class="tab" ><label for="1ad7b9e4fc7f4c32b60db48d93044ae8-20e6b5863e114d838459f534ff7d583c" >iOS</label>
+<input type="radio" id="1ad7b9e4fc7f4c32b60db48d93044ae8-554f08b56c624677802e7a9bf4bdbf4c" name="1ad7b9e4fc7f4c32b60db48d93044ae8" class="tab" ><label for="1ad7b9e4fc7f4c32b60db48d93044ae8-554f08b56c624677802e7a9bf4bdbf4c" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -568,7 +571,7 @@ var result = await CrossJobs.Current.Run(&quot;YourJobName&quot;);
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
