--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -366,17 +366,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d191d3ed1b7f4185ba78526dcbecea3d-ca070db8450e470c96fc0b0a88af4309" name="d191d3ed1b7f4185ba78526dcbecea3d" class="tab" checked><label for="d191d3ed1b7f4185ba78526dcbecea3d-ca070db8450e470c96fc0b0a88af4309" >General</label>
-<input type="radio" id="d191d3ed1b7f4185ba78526dcbecea3d-7191911209434acebec7d7f02f83f3ad" name="d191d3ed1b7f4185ba78526dcbecea3d" class="tab" ><label for="d191d3ed1b7f4185ba78526dcbecea3d-7191911209434acebec7d7f02f83f3ad" >Startup</label>
-<input type="radio" id="d191d3ed1b7f4185ba78526dcbecea3d-90e2080356db4b8787bbe61674724287" name="d191d3ed1b7f4185ba78526dcbecea3d" class="tab" ><label for="d191d3ed1b7f4185ba78526dcbecea3d-90e2080356db4b8787bbe61674724287" >Android</label>
-<input type="radio" id="d191d3ed1b7f4185ba78526dcbecea3d-29af21c5fbf74df4ae74d90a40a28707" name="d191d3ed1b7f4185ba78526dcbecea3d" class="tab" ><label for="d191d3ed1b7f4185ba78526dcbecea3d-29af21c5fbf74df4ae74d90a40a28707" >iOS</label>
-<input type="radio" id="d191d3ed1b7f4185ba78526dcbecea3d-62cc229f321f4133baaf2ef274bdb3dc" name="d191d3ed1b7f4185ba78526dcbecea3d" class="tab" ><label for="d191d3ed1b7f4185ba78526dcbecea3d-62cc229f321f4133baaf2ef274bdb3dc" >Windows</label>
+<input type="radio" id="18b5b73e6a0841c482b360c3049c5775-f4c71dd2f81644ec893dac3d2d1b20b9" name="18b5b73e6a0841c482b360c3049c5775" class="tab" checked><label for="18b5b73e6a0841c482b360c3049c5775-f4c71dd2f81644ec893dac3d2d1b20b9" >General</label>
+<input type="radio" id="18b5b73e6a0841c482b360c3049c5775-bab218d8220b42ac82d3e911d428cce0" name="18b5b73e6a0841c482b360c3049c5775" class="tab" ><label for="18b5b73e6a0841c482b360c3049c5775-bab218d8220b42ac82d3e911d428cce0" >Startup</label>
+<input type="radio" id="18b5b73e6a0841c482b360c3049c5775-2e874d0a70674e81ba7ff888b904a88e" name="18b5b73e6a0841c482b360c3049c5775" class="tab" ><label for="18b5b73e6a0841c482b360c3049c5775-2e874d0a70674e81ba7ff888b904a88e" >Android</label>
+<input type="radio" id="18b5b73e6a0841c482b360c3049c5775-18eec17b6e694cbcb8f20c02af3452ab" name="18b5b73e6a0841c482b360c3049c5775" class="tab" ><label for="18b5b73e6a0841c482b360c3049c5775-18eec17b6e694cbcb8f20c02af3452ab" >iOS</label>
+<input type="radio" id="18b5b73e6a0841c482b360c3049c5775-9204c4338a7740c18b145ea2c41fb4fc" name="18b5b73e6a0841c482b360c3049c5775" class="tab" ><label for="18b5b73e6a0841c482b360c3049c5775-9204c4338a7740c18b145ea2c41fb4fc" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -657,7 +660,7 @@ public class GeofenceUsage
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
