--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -366,7 +366,10 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -381,10 +384,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="0311ba6cc4b04994851d2157d242e24d-63171caeb59b4c40aceda5fd10904284" name="0311ba6cc4b04994851d2157d242e24d" class="tab" checked><label for="0311ba6cc4b04994851d2157d242e24d-63171caeb59b4c40aceda5fd10904284" >General</label>
-<input type="radio" id="0311ba6cc4b04994851d2157d242e24d-c828b992ae2c481c8eb18cf102bf72a1" name="0311ba6cc4b04994851d2157d242e24d" class="tab" ><label for="0311ba6cc4b04994851d2157d242e24d-c828b992ae2c481c8eb18cf102bf72a1" >Startup</label>
-<input type="radio" id="0311ba6cc4b04994851d2157d242e24d-c6bed5d582ea40b59410c6dc2eefcadf" name="0311ba6cc4b04994851d2157d242e24d" class="tab" ><label for="0311ba6cc4b04994851d2157d242e24d-c6bed5d582ea40b59410c6dc2eefcadf" >Android</label>
-<input type="radio" id="0311ba6cc4b04994851d2157d242e24d-afb4a3042cc04e248053d1454964986f" name="0311ba6cc4b04994851d2157d242e24d" class="tab" ><label for="0311ba6cc4b04994851d2157d242e24d-afb4a3042cc04e248053d1454964986f" >iOS</label>
+<input type="radio" id="1bb9d7fc5100413ba4623b5afc6fe9bf-71a688b6618143bd9b7912c3708e0a84" name="1bb9d7fc5100413ba4623b5afc6fe9bf" class="tab" checked><label for="1bb9d7fc5100413ba4623b5afc6fe9bf-71a688b6618143bd9b7912c3708e0a84" >General</label>
+<input type="radio" id="1bb9d7fc5100413ba4623b5afc6fe9bf-6769f10dbf314194b578165cb9bfad8b" name="1bb9d7fc5100413ba4623b5afc6fe9bf" class="tab" ><label for="1bb9d7fc5100413ba4623b5afc6fe9bf-6769f10dbf314194b578165cb9bfad8b" >Startup</label>
+<input type="radio" id="1bb9d7fc5100413ba4623b5afc6fe9bf-bc485e9e5f884f62ab7ac6341703e89d" name="1bb9d7fc5100413ba4623b5afc6fe9bf" class="tab" ><label for="1bb9d7fc5100413ba4623b5afc6fe9bf-bc485e9e5f884f62ab7ac6341703e89d" >Android</label>
+<input type="radio" id="1bb9d7fc5100413ba4623b5afc6fe9bf-bd224f6118714f2a80fe4a46d0af3465" name="1bb9d7fc5100413ba4623b5afc6fe9bf" class="tab" ><label for="1bb9d7fc5100413ba4623b5afc6fe9bf-bd224f6118714f2a80fe4a46d0af3465" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -494,7 +497,7 @@ foreach (var record in data) {
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
