--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -364,7 +364,10 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -373,11 +376,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="d1468599ba0a4cdda8f720c607068538-8f15e23da6444cf1844227dea2708f02" name="d1468599ba0a4cdda8f720c607068538" class="tab" checked=""><label for="d1468599ba0a4cdda8f720c607068538-8f15e23da6444cf1844227dea2708f02">General</label>
-<input type="radio" id="d1468599ba0a4cdda8f720c607068538-e1de3a5d48944b668bac2ff417773dce" name="d1468599ba0a4cdda8f720c607068538" class="tab"><label for="d1468599ba0a4cdda8f720c607068538-e1de3a5d48944b668bac2ff417773dce">Startup</label>
-<input type="radio" id="d1468599ba0a4cdda8f720c607068538-5112335a83b246798bb9dbd322f5d0b2" name="d1468599ba0a4cdda8f720c607068538" class="tab"><label for="d1468599ba0a4cdda8f720c607068538-5112335a83b246798bb9dbd322f5d0b2">Android</label>
-<input type="radio" id="d1468599ba0a4cdda8f720c607068538-849d9967e3694f85a6aa4e8a9eec75f9" name="d1468599ba0a4cdda8f720c607068538" class="tab"><label for="d1468599ba0a4cdda8f720c607068538-849d9967e3694f85a6aa4e8a9eec75f9">iOS</label>
-<input type="radio" id="d1468599ba0a4cdda8f720c607068538-8756413b8ef843cd85268e3a7701b109" name="d1468599ba0a4cdda8f720c607068538" class="tab"><label for="d1468599ba0a4cdda8f720c607068538-8756413b8ef843cd85268e3a7701b109">Windows</label>
+<input type="radio" id="4180a0e92cc54bcebaf5962cb7eaf7ba-9b04970ce673442985ee3397e63a7d93" name="4180a0e92cc54bcebaf5962cb7eaf7ba" class="tab" checked=""><label for="4180a0e92cc54bcebaf5962cb7eaf7ba-9b04970ce673442985ee3397e63a7d93">General</label>
+<input type="radio" id="4180a0e92cc54bcebaf5962cb7eaf7ba-9faed3892aab42cf8f5a424537d0aac7" name="4180a0e92cc54bcebaf5962cb7eaf7ba" class="tab"><label for="4180a0e92cc54bcebaf5962cb7eaf7ba-9faed3892aab42cf8f5a424537d0aac7">Startup</label>
+<input type="radio" id="4180a0e92cc54bcebaf5962cb7eaf7ba-fc4425dd541140a49600d29588f5344f" name="4180a0e92cc54bcebaf5962cb7eaf7ba" class="tab"><label for="4180a0e92cc54bcebaf5962cb7eaf7ba-fc4425dd541140a49600d29588f5344f">Android</label>
+<input type="radio" id="4180a0e92cc54bcebaf5962cb7eaf7ba-094cba3293704c7fa45f537c7f4b3968" name="4180a0e92cc54bcebaf5962cb7eaf7ba" class="tab"><label for="4180a0e92cc54bcebaf5962cb7eaf7ba-094cba3293704c7fa45f537c7f4b3968">iOS</label>
+<input type="radio" id="4180a0e92cc54bcebaf5962cb7eaf7ba-c83ee15f51a94cb4a5f4614262f390e0" name="4180a0e92cc54bcebaf5962cb7eaf7ba" class="tab"><label for="4180a0e92cc54bcebaf5962cb7eaf7ba-c83ee15f51a94cb4a5f4614262f390e0">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -462,7 +465,7 @@ public class NotificationDelegate : INotificationDelegate
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
