--- a/push/firebase.html
+++ b/push/firebase.html
@@ -364,16 +364,19 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="79302842cacc45d9bfc0a9a2c58b34eb-7ef414fa4f50446387b769d224161cb4" name="79302842cacc45d9bfc0a9a2c58b34eb" class="tab" checked=""><label for="79302842cacc45d9bfc0a9a2c58b34eb-7ef414fa4f50446387b769d224161cb4">General</label>
-<input type="radio" id="79302842cacc45d9bfc0a9a2c58b34eb-545f903950a64f82949117976c711455" name="79302842cacc45d9bfc0a9a2c58b34eb" class="tab"><label for="79302842cacc45d9bfc0a9a2c58b34eb-545f903950a64f82949117976c711455">Startup</label>
-<input type="radio" id="79302842cacc45d9bfc0a9a2c58b34eb-9dd95a208b7d40aaa7a04a1e2a2b83a3" name="79302842cacc45d9bfc0a9a2c58b34eb" class="tab"><label for="79302842cacc45d9bfc0a9a2c58b34eb-9dd95a208b7d40aaa7a04a1e2a2b83a3">Android</label>
-<input type="radio" id="79302842cacc45d9bfc0a9a2c58b34eb-53df36fe83844df48af81f137c8aed0d" name="79302842cacc45d9bfc0a9a2c58b34eb" class="tab"><label for="79302842cacc45d9bfc0a9a2c58b34eb-53df36fe83844df48af81f137c8aed0d">iOS</label>
+<input type="radio" id="0e54683773d64f8d8c530abaafbcb938-a716b7938f1d4053b9724a294220fc9e" name="0e54683773d64f8d8c530abaafbcb938" class="tab" checked=""><label for="0e54683773d64f8d8c530abaafbcb938-a716b7938f1d4053b9724a294220fc9e">General</label>
+<input type="radio" id="0e54683773d64f8d8c530abaafbcb938-2cdf2cc7e3a2480996584075bb54b31a" name="0e54683773d64f8d8c530abaafbcb938" class="tab"><label for="0e54683773d64f8d8c530abaafbcb938-2cdf2cc7e3a2480996584075bb54b31a">Startup</label>
+<input type="radio" id="0e54683773d64f8d8c530abaafbcb938-3f5c50bca85145cc85c23d4d4710f0ba" name="0e54683773d64f8d8c530abaafbcb938" class="tab"><label for="0e54683773d64f8d8c530abaafbcb938-3f5c50bca85145cc85c23d4d4710f0ba">Android</label>
+<input type="radio" id="0e54683773d64f8d8c530abaafbcb938-4c65c2fc932347fb82e5032703442c99" name="0e54683773d64f8d8c530abaafbcb938" class="tab"><label for="0e54683773d64f8d8c530abaafbcb938-4c65c2fc932347fb82e5032703442c99">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -473,7 +476,7 @@ and mark it as a "BundleResource"</p>
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
