--- a/push/onesignal.html
+++ b/push/onesignal.html
@@ -366,16 +366,19 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="7f4076825437427793b8b8125dc9d9a9-a99053e6fca040f88f07b96ea170f70e" name="7f4076825437427793b8b8125dc9d9a9" class="tab" checked><label for="7f4076825437427793b8b8125dc9d9a9-a99053e6fca040f88f07b96ea170f70e" >General</label>
-<input type="radio" id="7f4076825437427793b8b8125dc9d9a9-466ad41c0cea42e6b8f9bbb3ed86e439" name="7f4076825437427793b8b8125dc9d9a9" class="tab" ><label for="7f4076825437427793b8b8125dc9d9a9-466ad41c0cea42e6b8f9bbb3ed86e439" >Startup</label>
-<input type="radio" id="7f4076825437427793b8b8125dc9d9a9-69df11aef02044b6aa37c0bdf6f819ae" name="7f4076825437427793b8b8125dc9d9a9" class="tab" ><label for="7f4076825437427793b8b8125dc9d9a9-69df11aef02044b6aa37c0bdf6f819ae" >Android</label>
-<input type="radio" id="7f4076825437427793b8b8125dc9d9a9-d7a9a07f9e6443ccabdc4cfb8d2141d5" name="7f4076825437427793b8b8125dc9d9a9" class="tab" ><label for="7f4076825437427793b8b8125dc9d9a9-d7a9a07f9e6443ccabdc4cfb8d2141d5" >iOS</label>
+<input type="radio" id="72eb24e03f874f0bbaceb0d5391fceff-dc1cac740cf24de282bbef76c46538d2" name="72eb24e03f874f0bbaceb0d5391fceff" class="tab" checked><label for="72eb24e03f874f0bbaceb0d5391fceff-dc1cac740cf24de282bbef76c46538d2" >General</label>
+<input type="radio" id="72eb24e03f874f0bbaceb0d5391fceff-f84347ed8e0c4dd48fe9c2f4e89b85a3" name="72eb24e03f874f0bbaceb0d5391fceff" class="tab" ><label for="72eb24e03f874f0bbaceb0d5391fceff-f84347ed8e0c4dd48fe9c2f4e89b85a3" >Startup</label>
+<input type="radio" id="72eb24e03f874f0bbaceb0d5391fceff-edf1e616b9ea4d0c88940480f5014bdb" name="72eb24e03f874f0bbaceb0d5391fceff" class="tab" ><label for="72eb24e03f874f0bbaceb0d5391fceff-edf1e616b9ea4d0c88940480f5014bdb" >Android</label>
+<input type="radio" id="72eb24e03f874f0bbaceb0d5391fceff-a01721cea56f424da324eabb8dbf986c" name="72eb24e03f874f0bbaceb0d5391fceff" class="tab" ><label for="72eb24e03f874f0bbaceb0d5391fceff-a01721cea56f424da324eabb8dbf986c" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -468,7 +471,7 @@ public override void DidReceiveRemoteNotification(UIApplication application, NSD
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
