--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -366,16 +366,19 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="80a56d944c3248fe91eb1851f6a3a221-390b580180c04a0bacc2b09fadfbc624" name="80a56d944c3248fe91eb1851f6a3a221" class="tab" checked><label for="80a56d944c3248fe91eb1851f6a3a221-390b580180c04a0bacc2b09fadfbc624" >General</label>
-<input type="radio" id="80a56d944c3248fe91eb1851f6a3a221-c1c272493d0f4175bc11a83f3411f67f" name="80a56d944c3248fe91eb1851f6a3a221" class="tab" ><label for="80a56d944c3248fe91eb1851f6a3a221-c1c272493d0f4175bc11a83f3411f67f" >Startup</label>
-<input type="radio" id="80a56d944c3248fe91eb1851f6a3a221-fdbebfa19b46433dbcdea0b0fd6ecb5c" name="80a56d944c3248fe91eb1851f6a3a221" class="tab" ><label for="80a56d944c3248fe91eb1851f6a3a221-fdbebfa19b46433dbcdea0b0fd6ecb5c" >Android</label>
-<input type="radio" id="80a56d944c3248fe91eb1851f6a3a221-e9ea04ef0fce405783714403fa791ba7" name="80a56d944c3248fe91eb1851f6a3a221" class="tab" ><label for="80a56d944c3248fe91eb1851f6a3a221-e9ea04ef0fce405783714403fa791ba7" >Windows</label>
+<input type="radio" id="813256d3d82542738ac1f8cf860d03c9-22826e9d216241ada27e1ba664807600" name="813256d3d82542738ac1f8cf860d03c9" class="tab" checked><label for="813256d3d82542738ac1f8cf860d03c9-22826e9d216241ada27e1ba664807600" >General</label>
+<input type="radio" id="813256d3d82542738ac1f8cf860d03c9-3dfb76c2e9574df4b82a83f0ee51057c" name="813256d3d82542738ac1f8cf860d03c9" class="tab" ><label for="813256d3d82542738ac1f8cf860d03c9-3dfb76c2e9574df4b82a83f0ee51057c" >Startup</label>
+<input type="radio" id="813256d3d82542738ac1f8cf860d03c9-eaa72bd5c76c4e9fb33d0993a4f7e247" name="813256d3d82542738ac1f8cf860d03c9" class="tab" ><label for="813256d3d82542738ac1f8cf860d03c9-eaa72bd5c76c4e9fb33d0993a4f7e247" >Android</label>
+<input type="radio" id="813256d3d82542738ac1f8cf860d03c9-ee8775674c1f4cbf988dfecc6c29631a" name="813256d3d82542738ac1f8cf860d03c9" class="tab" ><label for="813256d3d82542738ac1f8cf860d03c9-ee8775674c1f4cbf988dfecc6c29631a" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -422,7 +425,7 @@ namespace YourNamespace
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
