--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -366,17 +366,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="fe8475f16bcd4a9f835d62f98495adbb-0dbe3fd4f0424da597b53c3ee3b63ead" name="fe8475f16bcd4a9f835d62f98495adbb" class="tab" checked><label for="fe8475f16bcd4a9f835d62f98495adbb-0dbe3fd4f0424da597b53c3ee3b63ead" >General</label>
-<input type="radio" id="fe8475f16bcd4a9f835d62f98495adbb-2de20d63d9724ad8a34604f2e8f3f3a1" name="fe8475f16bcd4a9f835d62f98495adbb" class="tab" ><label for="fe8475f16bcd4a9f835d62f98495adbb-2de20d63d9724ad8a34604f2e8f3f3a1" >Startup</label>
-<input type="radio" id="fe8475f16bcd4a9f835d62f98495adbb-5b5992db22c2435bbe2128633d9770b3" name="fe8475f16bcd4a9f835d62f98495adbb" class="tab" ><label for="fe8475f16bcd4a9f835d62f98495adbb-5b5992db22c2435bbe2128633d9770b3" >Android</label>
-<input type="radio" id="fe8475f16bcd4a9f835d62f98495adbb-0aa2f47eaf624cc6b08231f9500aafc1" name="fe8475f16bcd4a9f835d62f98495adbb" class="tab" ><label for="fe8475f16bcd4a9f835d62f98495adbb-0aa2f47eaf624cc6b08231f9500aafc1" >iOS</label>
-<input type="radio" id="fe8475f16bcd4a9f835d62f98495adbb-1dc5f18a55f4481a801497cbc7134cd2" name="fe8475f16bcd4a9f835d62f98495adbb" class="tab" ><label for="fe8475f16bcd4a9f835d62f98495adbb-1dc5f18a55f4481a801497cbc7134cd2" >Windows</label>
+<input type="radio" id="262585e0ef0c4179a14c0174903a9afe-1cdf7a094ffe451eb6d155176e1588fb" name="262585e0ef0c4179a14c0174903a9afe" class="tab" checked><label for="262585e0ef0c4179a14c0174903a9afe-1cdf7a094ffe451eb6d155176e1588fb" >General</label>
+<input type="radio" id="262585e0ef0c4179a14c0174903a9afe-ec90ea17c2d7427abd089c7a359e5c74" name="262585e0ef0c4179a14c0174903a9afe" class="tab" ><label for="262585e0ef0c4179a14c0174903a9afe-ec90ea17c2d7427abd089c7a359e5c74" >Startup</label>
+<input type="radio" id="262585e0ef0c4179a14c0174903a9afe-a8f3443174f045f6baa127d8ea9047cc" name="262585e0ef0c4179a14c0174903a9afe" class="tab" ><label for="262585e0ef0c4179a14c0174903a9afe-a8f3443174f045f6baa127d8ea9047cc" >Android</label>
+<input type="radio" id="262585e0ef0c4179a14c0174903a9afe-f54a185484734816b10ed1d7a2c86133" name="262585e0ef0c4179a14c0174903a9afe" class="tab" ><label for="262585e0ef0c4179a14c0174903a9afe-f54a185484734816b10ed1d7a2c86133" >iOS</label>
+<input type="radio" id="262585e0ef0c4179a14c0174903a9afe-8f1be8181faf4875849f1bff1ded7e93" name="262585e0ef0c4179a14c0174903a9afe" class="tab" ><label for="262585e0ef0c4179a14c0174903a9afe-8f1be8181faf4875849f1bff1ded7e93" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -426,7 +429,7 @@ namespace YourNamespace
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
