--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -366,15 +366,18 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="256314e2b05745898ff59f32e3bc1c78-6e9a84a7631f4f62a797d42e9436f96b" name="256314e2b05745898ff59f32e3bc1c78" class="tab" checked><label for="256314e2b05745898ff59f32e3bc1c78-6e9a84a7631f4f62a797d42e9436f96b" >General</label>
-<input type="radio" id="256314e2b05745898ff59f32e3bc1c78-c99115aa94cc4320937ba796ce1ffbe2" name="256314e2b05745898ff59f32e3bc1c78" class="tab" ><label for="256314e2b05745898ff59f32e3bc1c78-c99115aa94cc4320937ba796ce1ffbe2" >Startup</label>
-<input type="radio" id="256314e2b05745898ff59f32e3bc1c78-6cff137cebbf4672b0f9dd84b1e83917" name="256314e2b05745898ff59f32e3bc1c78" class="tab" ><label for="256314e2b05745898ff59f32e3bc1c78-6cff137cebbf4672b0f9dd84b1e83917" >Android</label>
+<input type="radio" id="00ab96739e9d4e52a5c3866b2c347bf6-988c6861df52444fa153f7db31bbc6c3" name="00ab96739e9d4e52a5c3866b2c347bf6" class="tab" checked><label for="00ab96739e9d4e52a5c3866b2c347bf6-988c6861df52444fa153f7db31bbc6c3" >General</label>
+<input type="radio" id="00ab96739e9d4e52a5c3866b2c347bf6-8fd4c1c2ad8c41f289638967ab264fef" name="00ab96739e9d4e52a5c3866b2c347bf6" class="tab" ><label for="00ab96739e9d4e52a5c3866b2c347bf6-8fd4c1c2ad8c41f289638967ab264fef" >Startup</label>
+<input type="radio" id="00ab96739e9d4e52a5c3866b2c347bf6-978db1fee14e4154a64cc1d3cb2761ef" name="00ab96739e9d4e52a5c3866b2c347bf6" class="tab" ><label for="00ab96739e9d4e52a5c3866b2c347bf6-978db1fee14e4154a64cc1d3cb2761ef" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -418,7 +421,7 @@ namespace YourNamespace
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
