--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -366,17 +366,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="19a471b6e5ff4ee1a2d079f3856496d9-608c70ec3abe4b0fa0c47e2b2f056642" name="19a471b6e5ff4ee1a2d079f3856496d9" class="tab" checked><label for="19a471b6e5ff4ee1a2d079f3856496d9-608c70ec3abe4b0fa0c47e2b2f056642" >General</label>
-<input type="radio" id="19a471b6e5ff4ee1a2d079f3856496d9-b59368ec4cc24b59ba947a024e599d65" name="19a471b6e5ff4ee1a2d079f3856496d9" class="tab" ><label for="19a471b6e5ff4ee1a2d079f3856496d9-b59368ec4cc24b59ba947a024e599d65" >Startup</label>
-<input type="radio" id="19a471b6e5ff4ee1a2d079f3856496d9-0bf808fe8d3243ec82906a4a77a2fadc" name="19a471b6e5ff4ee1a2d079f3856496d9" class="tab" ><label for="19a471b6e5ff4ee1a2d079f3856496d9-0bf808fe8d3243ec82906a4a77a2fadc" >Android</label>
-<input type="radio" id="19a471b6e5ff4ee1a2d079f3856496d9-29cbc7f99943464baa25734b2a1d35eb" name="19a471b6e5ff4ee1a2d079f3856496d9" class="tab" ><label for="19a471b6e5ff4ee1a2d079f3856496d9-29cbc7f99943464baa25734b2a1d35eb" >iOS</label>
-<input type="radio" id="19a471b6e5ff4ee1a2d079f3856496d9-4f634ffbf1ce4df5ad818a33442dbeed" name="19a471b6e5ff4ee1a2d079f3856496d9" class="tab" ><label for="19a471b6e5ff4ee1a2d079f3856496d9-4f634ffbf1ce4df5ad818a33442dbeed" >Windows</label>
+<input type="radio" id="d749a6215888490c8e1c7a4dfc01aab7-e24df0a365ef4b1fbc36f4092d248d5c" name="d749a6215888490c8e1c7a4dfc01aab7" class="tab" checked><label for="d749a6215888490c8e1c7a4dfc01aab7-e24df0a365ef4b1fbc36f4092d248d5c" >General</label>
+<input type="radio" id="d749a6215888490c8e1c7a4dfc01aab7-e6f547545dfc4d68ac3da112b9c4662b" name="d749a6215888490c8e1c7a4dfc01aab7" class="tab" ><label for="d749a6215888490c8e1c7a4dfc01aab7-e6f547545dfc4d68ac3da112b9c4662b" >Startup</label>
+<input type="radio" id="d749a6215888490c8e1c7a4dfc01aab7-bba6f792ce4f4af19454ff831030a9e2" name="d749a6215888490c8e1c7a4dfc01aab7" class="tab" ><label for="d749a6215888490c8e1c7a4dfc01aab7-bba6f792ce4f4af19454ff831030a9e2" >Android</label>
+<input type="radio" id="d749a6215888490c8e1c7a4dfc01aab7-9b6c4535b75a4ac2990883a292da9fdc" name="d749a6215888490c8e1c7a4dfc01aab7" class="tab" ><label for="d749a6215888490c8e1c7a4dfc01aab7-9b6c4535b75a4ac2990883a292da9fdc" >iOS</label>
+<input type="radio" id="d749a6215888490c8e1c7a4dfc01aab7-30a52a476d0d4051bba65cfb0ba18478" name="d749a6215888490c8e1c7a4dfc01aab7" class="tab" ><label for="d749a6215888490c8e1c7a4dfc01aab7-30a52a476d0d4051bba65cfb0ba18478" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -426,7 +429,7 @@ namespace YourNamespace
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
