--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -366,17 +366,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="9734a652203044058ade2511f0b4c2c9-24a96f54a7cf40379098d3cb74d0d6c2" name="9734a652203044058ade2511f0b4c2c9" class="tab" checked><label for="9734a652203044058ade2511f0b4c2c9-24a96f54a7cf40379098d3cb74d0d6c2" >General</label>
-<input type="radio" id="9734a652203044058ade2511f0b4c2c9-4afe49dd78a44db5a58e5e5c1efdb37c" name="9734a652203044058ade2511f0b4c2c9" class="tab" ><label for="9734a652203044058ade2511f0b4c2c9-4afe49dd78a44db5a58e5e5c1efdb37c" >Startup</label>
-<input type="radio" id="9734a652203044058ade2511f0b4c2c9-52e75f2ddb804a9baec728f7c9b5120a" name="9734a652203044058ade2511f0b4c2c9" class="tab" ><label for="9734a652203044058ade2511f0b4c2c9-52e75f2ddb804a9baec728f7c9b5120a" >Android</label>
-<input type="radio" id="9734a652203044058ade2511f0b4c2c9-55c0e10028d04485b5fed5c9acc567a1" name="9734a652203044058ade2511f0b4c2c9" class="tab" ><label for="9734a652203044058ade2511f0b4c2c9-55c0e10028d04485b5fed5c9acc567a1" >iOS</label>
-<input type="radio" id="9734a652203044058ade2511f0b4c2c9-ab4d61ed74f8450e9cb02212ae68e1af" name="9734a652203044058ade2511f0b4c2c9" class="tab" ><label for="9734a652203044058ade2511f0b4c2c9-ab4d61ed74f8450e9cb02212ae68e1af" >Windows</label>
+<input type="radio" id="ad9528107b4e495fa1bb7bdc84135611-5919a809e59745acbc38205c9ff6f261" name="ad9528107b4e495fa1bb7bdc84135611" class="tab" checked><label for="ad9528107b4e495fa1bb7bdc84135611-5919a809e59745acbc38205c9ff6f261" >General</label>
+<input type="radio" id="ad9528107b4e495fa1bb7bdc84135611-deea4d0a35be4e0e96d104eeff4f142f" name="ad9528107b4e495fa1bb7bdc84135611" class="tab" ><label for="ad9528107b4e495fa1bb7bdc84135611-deea4d0a35be4e0e96d104eeff4f142f" >Startup</label>
+<input type="radio" id="ad9528107b4e495fa1bb7bdc84135611-e523c55dd701466096d566e0f1674526" name="ad9528107b4e495fa1bb7bdc84135611" class="tab" ><label for="ad9528107b4e495fa1bb7bdc84135611-e523c55dd701466096d566e0f1674526" >Android</label>
+<input type="radio" id="ad9528107b4e495fa1bb7bdc84135611-d1a586e077ed4974a1a70d47e70b0ceb" name="ad9528107b4e495fa1bb7bdc84135611" class="tab" ><label for="ad9528107b4e495fa1bb7bdc84135611-d1a586e077ed4974a1a70d47e70b0ceb" >iOS</label>
+<input type="radio" id="ad9528107b4e495fa1bb7bdc84135611-b5bbecddb6eb4c4484c74feb85c5d52e" name="ad9528107b4e495fa1bb7bdc84135611" class="tab" ><label for="ad9528107b4e495fa1bb7bdc84135611-b5bbecddb6eb4c4484c74feb85c5d52e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -443,7 +446,7 @@ namespace YourNamespace
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
