--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -366,16 +366,19 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d62a3649620245fb9989c375048e5afe-5a66949b6f2940848a03f571d4806231" name="d62a3649620245fb9989c375048e5afe" class="tab" checked><label for="d62a3649620245fb9989c375048e5afe-5a66949b6f2940848a03f571d4806231" >General</label>
-<input type="radio" id="d62a3649620245fb9989c375048e5afe-1136255ba16e45c7885fe2f0128445ef" name="d62a3649620245fb9989c375048e5afe" class="tab" ><label for="d62a3649620245fb9989c375048e5afe-1136255ba16e45c7885fe2f0128445ef" >Startup</label>
-<input type="radio" id="d62a3649620245fb9989c375048e5afe-a924c0a28dfa41f69360f34bb1b16953" name="d62a3649620245fb9989c375048e5afe" class="tab" ><label for="d62a3649620245fb9989c375048e5afe-a924c0a28dfa41f69360f34bb1b16953" >Android</label>
-<input type="radio" id="d62a3649620245fb9989c375048e5afe-70faecc7f5e24c13b099115e6279a64c" name="d62a3649620245fb9989c375048e5afe" class="tab" ><label for="d62a3649620245fb9989c375048e5afe-70faecc7f5e24c13b099115e6279a64c" >iOS</label>
+<input type="radio" id="39179a147dda4e55bc30294ff4f41acf-f7c34b42cc104e1f80abbf8ba62aadc7" name="39179a147dda4e55bc30294ff4f41acf" class="tab" checked><label for="39179a147dda4e55bc30294ff4f41acf-f7c34b42cc104e1f80abbf8ba62aadc7" >General</label>
+<input type="radio" id="39179a147dda4e55bc30294ff4f41acf-9a845dca3e7649909ae5eea4450e7022" name="39179a147dda4e55bc30294ff4f41acf" class="tab" ><label for="39179a147dda4e55bc30294ff4f41acf-9a845dca3e7649909ae5eea4450e7022" >Startup</label>
+<input type="radio" id="39179a147dda4e55bc30294ff4f41acf-ddd5eceb885541379bb5de094df1316a" name="39179a147dda4e55bc30294ff4f41acf" class="tab" ><label for="39179a147dda4e55bc30294ff4f41acf-ddd5eceb885541379bb5de094df1316a" >Android</label>
+<input type="radio" id="39179a147dda4e55bc30294ff4f41acf-42e42981404641d09b7b6c4ea8628217" name="39179a147dda4e55bc30294ff4f41acf" class="tab" ><label for="39179a147dda4e55bc30294ff4f41acf-42e42981404641d09b7b6c4ea8628217" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -422,7 +425,7 @@ namespace YourNamespace
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
