--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -364,18 +364,21 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="38ae6f64ae044f988ebf1bc0d2001015-ba1410aa04e049978b385fab43e515a4" name="38ae6f64ae044f988ebf1bc0d2001015" class="tab" checked=""><label for="38ae6f64ae044f988ebf1bc0d2001015-ba1410aa04e049978b385fab43e515a4">General</label>
-<input type="radio" id="38ae6f64ae044f988ebf1bc0d2001015-f7ef7a3c097e44cb886cf77f0a73ebaf" name="38ae6f64ae044f988ebf1bc0d2001015" class="tab"><label for="38ae6f64ae044f988ebf1bc0d2001015-f7ef7a3c097e44cb886cf77f0a73ebaf">Startup</label>
-<input type="radio" id="38ae6f64ae044f988ebf1bc0d2001015-36c5e471217b454da23eb5fb468af3a8" name="38ae6f64ae044f988ebf1bc0d2001015" class="tab"><label for="38ae6f64ae044f988ebf1bc0d2001015-36c5e471217b454da23eb5fb468af3a8">Android</label>
-<input type="radio" id="38ae6f64ae044f988ebf1bc0d2001015-0e0647541b834821a124f228c61c30e1" name="38ae6f64ae044f988ebf1bc0d2001015" class="tab"><label for="38ae6f64ae044f988ebf1bc0d2001015-0e0647541b834821a124f228c61c30e1">iOS</label>
-<input type="radio" id="38ae6f64ae044f988ebf1bc0d2001015-394fd652a203493bb08ce76ab732fdab" name="38ae6f64ae044f988ebf1bc0d2001015" class="tab"><label for="38ae6f64ae044f988ebf1bc0d2001015-394fd652a203493bb08ce76ab732fdab">Windows</label>
+<input type="radio" id="dd18eb15e4644116af560cc30e4510db-3eb51185fb6e41528eee88add3add3fd" name="dd18eb15e4644116af560cc30e4510db" class="tab" checked=""><label for="dd18eb15e4644116af560cc30e4510db-3eb51185fb6e41528eee88add3add3fd">General</label>
+<input type="radio" id="dd18eb15e4644116af560cc30e4510db-c5a43a849f8f42c2a37b0c705da1cc6f" name="dd18eb15e4644116af560cc30e4510db" class="tab"><label for="dd18eb15e4644116af560cc30e4510db-c5a43a849f8f42c2a37b0c705da1cc6f">Startup</label>
+<input type="radio" id="dd18eb15e4644116af560cc30e4510db-00ef50008a51438f9d6fdb4f3c140d5d" name="dd18eb15e4644116af560cc30e4510db" class="tab"><label for="dd18eb15e4644116af560cc30e4510db-00ef50008a51438f9d6fdb4f3c140d5d">Android</label>
+<input type="radio" id="dd18eb15e4644116af560cc30e4510db-2ed8557158a94239898c06734685fa65" name="dd18eb15e4644116af560cc30e4510db" class="tab"><label for="dd18eb15e4644116af560cc30e4510db-2ed8557158a94239898c06734685fa65">iOS</label>
+<input type="radio" id="dd18eb15e4644116af560cc30e4510db-c18a92d6f9db4f2c80c1c779637cc546" name="dd18eb15e4644116af560cc30e4510db" class="tab"><label for="dd18eb15e4644116af560cc30e4510db-c18a92d6f9db4f2c80c1c779637cc546">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
@@ -484,7 +487,7 @@ services.UseBleClient();
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
