--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -366,17 +366,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d0636d70777e44348450b38f7731f85f-49ff94176a1e4bb996e8e71738d8ea56" name="d0636d70777e44348450b38f7731f85f" class="tab" checked><label for="d0636d70777e44348450b38f7731f85f-49ff94176a1e4bb996e8e71738d8ea56" >General</label>
-<input type="radio" id="d0636d70777e44348450b38f7731f85f-3431768600bd4a1793bb76db265349b2" name="d0636d70777e44348450b38f7731f85f" class="tab" ><label for="d0636d70777e44348450b38f7731f85f-3431768600bd4a1793bb76db265349b2" >Startup</label>
-<input type="radio" id="d0636d70777e44348450b38f7731f85f-bcf32c37fe58445693b6d3b8ee018ac7" name="d0636d70777e44348450b38f7731f85f" class="tab" ><label for="d0636d70777e44348450b38f7731f85f-bcf32c37fe58445693b6d3b8ee018ac7" >Android</label>
-<input type="radio" id="d0636d70777e44348450b38f7731f85f-e0a25e8cfd0e4c23a5fb8c836f738c83" name="d0636d70777e44348450b38f7731f85f" class="tab" ><label for="d0636d70777e44348450b38f7731f85f-e0a25e8cfd0e4c23a5fb8c836f738c83" >iOS</label>
-<input type="radio" id="d0636d70777e44348450b38f7731f85f-5df1471b60964362b45a9ebec78fcc78" name="d0636d70777e44348450b38f7731f85f" class="tab" ><label for="d0636d70777e44348450b38f7731f85f-5df1471b60964362b45a9ebec78fcc78" >Windows</label>
+<input type="radio" id="84906c6a7a884efbaaeedc6f4b3ff6fd-d11eddfdd07040818b68d1096f347e6d" name="84906c6a7a884efbaaeedc6f4b3ff6fd" class="tab" checked><label for="84906c6a7a884efbaaeedc6f4b3ff6fd-d11eddfdd07040818b68d1096f347e6d" >General</label>
+<input type="radio" id="84906c6a7a884efbaaeedc6f4b3ff6fd-1d54924f19824b04b062abaa04973436" name="84906c6a7a884efbaaeedc6f4b3ff6fd" class="tab" ><label for="84906c6a7a884efbaaeedc6f4b3ff6fd-1d54924f19824b04b062abaa04973436" >Startup</label>
+<input type="radio" id="84906c6a7a884efbaaeedc6f4b3ff6fd-f805bd129e3048b99ead980726a8efc1" name="84906c6a7a884efbaaeedc6f4b3ff6fd" class="tab" ><label for="84906c6a7a884efbaaeedc6f4b3ff6fd-f805bd129e3048b99ead980726a8efc1" >Android</label>
+<input type="radio" id="84906c6a7a884efbaaeedc6f4b3ff6fd-4854d8cf903c423397acb3b7e4353a4a" name="84906c6a7a884efbaaeedc6f4b3ff6fd" class="tab" ><label for="84906c6a7a884efbaaeedc6f4b3ff6fd-4854d8cf903c423397acb3b7e4353a4a" >iOS</label>
+<input type="radio" id="84906c6a7a884efbaaeedc6f4b3ff6fd-422ef10b27f747cb8c6c136de13d7fd0" name="84906c6a7a884efbaaeedc6f4b3ff6fd" class="tab" ><label for="84906c6a7a884efbaaeedc6f4b3ff6fd-422ef10b27f747cb8c6c136de13d7fd0" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -496,7 +499,7 @@ namespace YourNamespace
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
