--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -364,17 +364,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="c09d3127f5384dddbe81754c9df30e67-651cec987660432387edc46373246f58" name="c09d3127f5384dddbe81754c9df30e67" class="tab" checked=""><label for="c09d3127f5384dddbe81754c9df30e67-651cec987660432387edc46373246f58">General</label>
-<input type="radio" id="c09d3127f5384dddbe81754c9df30e67-cef2b0e4683d408abeb562d47d56d023" name="c09d3127f5384dddbe81754c9df30e67" class="tab"><label for="c09d3127f5384dddbe81754c9df30e67-cef2b0e4683d408abeb562d47d56d023">Startup</label>
-<input type="radio" id="c09d3127f5384dddbe81754c9df30e67-64715c372133408a83b3a8983fd471d2" name="c09d3127f5384dddbe81754c9df30e67" class="tab"><label for="c09d3127f5384dddbe81754c9df30e67-64715c372133408a83b3a8983fd471d2">Android</label>
-<input type="radio" id="c09d3127f5384dddbe81754c9df30e67-17da0ecfbc134ac49f8d656a65bb5e53" name="c09d3127f5384dddbe81754c9df30e67" class="tab"><label for="c09d3127f5384dddbe81754c9df30e67-17da0ecfbc134ac49f8d656a65bb5e53">iOS</label>
-<input type="radio" id="c09d3127f5384dddbe81754c9df30e67-8601deea4e6a4e5686a80f5efbc431c0" name="c09d3127f5384dddbe81754c9df30e67" class="tab"><label for="c09d3127f5384dddbe81754c9df30e67-8601deea4e6a4e5686a80f5efbc431c0">Windows</label>
+<input type="radio" id="def79b55efc2405d8708aa15705f2e84-42b9153e5e734fb39bf50d148a1c328e" name="def79b55efc2405d8708aa15705f2e84" class="tab" checked=""><label for="def79b55efc2405d8708aa15705f2e84-42b9153e5e734fb39bf50d148a1c328e">General</label>
+<input type="radio" id="def79b55efc2405d8708aa15705f2e84-9c5b7e1091b54de482f35d5f40a5adb7" name="def79b55efc2405d8708aa15705f2e84" class="tab"><label for="def79b55efc2405d8708aa15705f2e84-9c5b7e1091b54de482f35d5f40a5adb7">Startup</label>
+<input type="radio" id="def79b55efc2405d8708aa15705f2e84-d4daf604ab944bcc9851b465c5510280" name="def79b55efc2405d8708aa15705f2e84" class="tab"><label for="def79b55efc2405d8708aa15705f2e84-d4daf604ab944bcc9851b465c5510280">Android</label>
+<input type="radio" id="def79b55efc2405d8708aa15705f2e84-035f2aa64c4d4e4289a3246f7ee6c90d" name="def79b55efc2405d8708aa15705f2e84" class="tab"><label for="def79b55efc2405d8708aa15705f2e84-035f2aa64c4d4e4289a3246f7ee6c90d">iOS</label>
+<input type="radio" id="def79b55efc2405d8708aa15705f2e84-a71f302757264c9581447969a5a7fcd1" name="def79b55efc2405d8708aa15705f2e84" class="tab"><label for="def79b55efc2405d8708aa15705f2e84-a71f302757264c9581447969a5a7fcd1">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -456,11 +459,11 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="83daca160ce04d378425662859cfdcbc-85d89da7982446a382efabfd59326221" name="83daca160ce04d378425662859cfdcbc" class="tab" checked=""><label for="83daca160ce04d378425662859cfdcbc-85d89da7982446a382efabfd59326221">General</label>
-<input type="radio" id="83daca160ce04d378425662859cfdcbc-e75185085bdf49b3bf736eaaa1d3374e" name="83daca160ce04d378425662859cfdcbc" class="tab"><label for="83daca160ce04d378425662859cfdcbc-e75185085bdf49b3bf736eaaa1d3374e">Startup</label>
-<input type="radio" id="83daca160ce04d378425662859cfdcbc-d863401487c948ecae4fee3286703ad9" name="83daca160ce04d378425662859cfdcbc" class="tab"><label for="83daca160ce04d378425662859cfdcbc-d863401487c948ecae4fee3286703ad9">Android</label>
-<input type="radio" id="83daca160ce04d378425662859cfdcbc-22a64f45d3e54de0a04dcf15d4888838" name="83daca160ce04d378425662859cfdcbc" class="tab"><label for="83daca160ce04d378425662859cfdcbc-22a64f45d3e54de0a04dcf15d4888838">iOS</label>
-<input type="radio" id="83daca160ce04d378425662859cfdcbc-216b6cf05cb0422bbd344a47d9fa4f58" name="83daca160ce04d378425662859cfdcbc" class="tab"><label for="83daca160ce04d378425662859cfdcbc-216b6cf05cb0422bbd344a47d9fa4f58">Windows</label>
+<input type="radio" id="3e2496e55b534bf9a74aeb5ef44424ad-fa88e201604e40c6bdbcef98c9677366" name="3e2496e55b534bf9a74aeb5ef44424ad" class="tab" checked=""><label for="3e2496e55b534bf9a74aeb5ef44424ad-fa88e201604e40c6bdbcef98c9677366">General</label>
+<input type="radio" id="3e2496e55b534bf9a74aeb5ef44424ad-db5fd6dfafcc40cc93856d585d419cea" name="3e2496e55b534bf9a74aeb5ef44424ad" class="tab"><label for="3e2496e55b534bf9a74aeb5ef44424ad-db5fd6dfafcc40cc93856d585d419cea">Startup</label>
+<input type="radio" id="3e2496e55b534bf9a74aeb5ef44424ad-55376353b20e4810969d9bce48564d0d" name="3e2496e55b534bf9a74aeb5ef44424ad" class="tab"><label for="3e2496e55b534bf9a74aeb5ef44424ad-55376353b20e4810969d9bce48564d0d">Android</label>
+<input type="radio" id="3e2496e55b534bf9a74aeb5ef44424ad-e66f485727b5423c917a03feebaa0bcc" name="3e2496e55b534bf9a74aeb5ef44424ad" class="tab"><label for="3e2496e55b534bf9a74aeb5ef44424ad-e66f485727b5423c917a03feebaa0bcc">iOS</label>
+<input type="radio" id="3e2496e55b534bf9a74aeb5ef44424ad-819fd0bcbedb4c9ebfef71e339579f7a" name="3e2496e55b534bf9a74aeb5ef44424ad" class="tab"><label for="3e2496e55b534bf9a74aeb5ef44424ad-819fd0bcbedb4c9ebfef71e339579f7a">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -583,7 +586,7 @@ services.UseHttpTransfers&lt;YourNamespace.MyHttpTransferDelegate&gt;();
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
