--- a/locations/gps.html
+++ b/locations/gps.html
@@ -366,18 +366,21 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="0c9be9a766614d25b0c0675da0aa5743-92ff4165079743209e0d8ee2557f4896" name="0c9be9a766614d25b0c0675da0aa5743" class="tab" checked><label for="0c9be9a766614d25b0c0675da0aa5743-92ff4165079743209e0d8ee2557f4896" >General</label>
-<input type="radio" id="0c9be9a766614d25b0c0675da0aa5743-5cda51ae5d52404faa048b9ca85161ba" name="0c9be9a766614d25b0c0675da0aa5743" class="tab" ><label for="0c9be9a766614d25b0c0675da0aa5743-5cda51ae5d52404faa048b9ca85161ba" >Startup</label>
-<input type="radio" id="0c9be9a766614d25b0c0675da0aa5743-beb4f87a79dd42b89851930abff58a57" name="0c9be9a766614d25b0c0675da0aa5743" class="tab" ><label for="0c9be9a766614d25b0c0675da0aa5743-beb4f87a79dd42b89851930abff58a57" >Android</label>
-<input type="radio" id="0c9be9a766614d25b0c0675da0aa5743-8fd864ea2da6457ab82c44ebbe3b2878" name="0c9be9a766614d25b0c0675da0aa5743" class="tab" ><label for="0c9be9a766614d25b0c0675da0aa5743-8fd864ea2da6457ab82c44ebbe3b2878" >iOS</label>
-<input type="radio" id="0c9be9a766614d25b0c0675da0aa5743-95a1575f569e4fe4b22d214222cfdc40" name="0c9be9a766614d25b0c0675da0aa5743" class="tab" ><label for="0c9be9a766614d25b0c0675da0aa5743-95a1575f569e4fe4b22d214222cfdc40" >Windows</label>
+<input type="radio" id="f724452fce104c4c9277815783b4e6a0-6cbb8cc8bf0a4bb3806a52a3aaf5446c" name="f724452fce104c4c9277815783b4e6a0" class="tab" checked><label for="f724452fce104c4c9277815783b4e6a0-6cbb8cc8bf0a4bb3806a52a3aaf5446c" >General</label>
+<input type="radio" id="f724452fce104c4c9277815783b4e6a0-ee77ffbd52204062aa7a243178a921ed" name="f724452fce104c4c9277815783b4e6a0" class="tab" ><label for="f724452fce104c4c9277815783b4e6a0-ee77ffbd52204062aa7a243178a921ed" >Startup</label>
+<input type="radio" id="f724452fce104c4c9277815783b4e6a0-8be60a332a984625ac38f025b46880d2" name="f724452fce104c4c9277815783b4e6a0" class="tab" ><label for="f724452fce104c4c9277815783b4e6a0-8be60a332a984625ac38f025b46880d2" >Android</label>
+<input type="radio" id="f724452fce104c4c9277815783b4e6a0-1fcce12729b04d0e92fbb23401a2ddbf" name="f724452fce104c4c9277815783b4e6a0" class="tab" ><label for="f724452fce104c4c9277815783b4e6a0-1fcce12729b04d0e92fbb23401a2ddbf" >iOS</label>
+<input type="radio" id="f724452fce104c4c9277815783b4e6a0-186e02c6b03e46348311b8e38bcb4540" name="f724452fce104c4c9277815783b4e6a0" class="tab" ><label for="f724452fce104c4c9277815783b4e6a0-186e02c6b03e46348311b8e38bcb4540" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -535,7 +538,7 @@ public class GpsUsage
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
