--- a/push/azure.html
+++ b/push/azure.html
@@ -366,17 +366,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b810301d55e044bfab82bf487c41541d-f81eede2e90f4685b6a50e76e543d30b" name="b810301d55e044bfab82bf487c41541d" class="tab" checked><label for="b810301d55e044bfab82bf487c41541d-f81eede2e90f4685b6a50e76e543d30b" >General</label>
-<input type="radio" id="b810301d55e044bfab82bf487c41541d-22f364a48c1c4c4398c11394cbe0aa0a" name="b810301d55e044bfab82bf487c41541d" class="tab" ><label for="b810301d55e044bfab82bf487c41541d-22f364a48c1c4c4398c11394cbe0aa0a" >Startup</label>
-<input type="radio" id="b810301d55e044bfab82bf487c41541d-3e6ab2ebbd354a7488cec99fdb5a25cb" name="b810301d55e044bfab82bf487c41541d" class="tab" ><label for="b810301d55e044bfab82bf487c41541d-3e6ab2ebbd354a7488cec99fdb5a25cb" >Android</label>
-<input type="radio" id="b810301d55e044bfab82bf487c41541d-82f5d5eaf51d4552a71f40ec467bc416" name="b810301d55e044bfab82bf487c41541d" class="tab" ><label for="b810301d55e044bfab82bf487c41541d-82f5d5eaf51d4552a71f40ec467bc416" >iOS</label>
-<input type="radio" id="b810301d55e044bfab82bf487c41541d-652895822694472fb7f5ff6d97def42c" name="b810301d55e044bfab82bf487c41541d" class="tab" ><label for="b810301d55e044bfab82bf487c41541d-652895822694472fb7f5ff6d97def42c" >Windows</label>
+<input type="radio" id="58dde690d20840588e6d8a369c099161-f21554c008b64d3290922b394aacd702" name="58dde690d20840588e6d8a369c099161" class="tab" checked><label for="58dde690d20840588e6d8a369c099161-f21554c008b64d3290922b394aacd702" >General</label>
+<input type="radio" id="58dde690d20840588e6d8a369c099161-8e2d7e37c4e34529a12eadde350df153" name="58dde690d20840588e6d8a369c099161" class="tab" ><label for="58dde690d20840588e6d8a369c099161-8e2d7e37c4e34529a12eadde350df153" >Startup</label>
+<input type="radio" id="58dde690d20840588e6d8a369c099161-3c22ab500a6c4394a1c36650a537b3f2" name="58dde690d20840588e6d8a369c099161" class="tab" ><label for="58dde690d20840588e6d8a369c099161-3c22ab500a6c4394a1c36650a537b3f2" >Android</label>
+<input type="radio" id="58dde690d20840588e6d8a369c099161-625088e432324ff4bafd7aaa4cc156dc" name="58dde690d20840588e6d8a369c099161" class="tab" ><label for="58dde690d20840588e6d8a369c099161-625088e432324ff4bafd7aaa4cc156dc" >iOS</label>
+<input type="radio" id="58dde690d20840588e6d8a369c099161-4278305c2ea44938b50c016e7c5bb339" name="58dde690d20840588e6d8a369c099161" class="tab" ><label for="58dde690d20840588e6d8a369c099161-4278305c2ea44938b50c016e7c5bb339" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -479,7 +482,7 @@ public override void DidReceiveRemoteNotification(UIApplication application, NSD
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
