--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -366,7 +366,10 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -386,7 +389,8 @@
         <li><a href="/release-notes/v230">v2.3.0</a></li>
         <li><a href="/release-notes/v240">v2.4.0</a></li>
         <li><a href="/release-notes/v241">v2.4.1</a></li>
-        <li><a href="/release-notes/nextrelease">Next Release (2.5.0)</a></li>
+        <li><a href="/release-notes/v242">2.4.2</a></li>
+        <li><a href="/release-notes/nextrelease">(Next Release) 2.5.0</a></li>
 </ul>
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
@@ -400,7 +404,7 @@
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
