--- a/release-notes/nextrelease.html
+++ b/release-notes/nextrelease.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - Next Release (2.5.0)</title>
+    <title>Shiny.NET - (Next Release) 2.5.0</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">Next Release (2.5.0)</div>
+                                <div class="text-white m-0 title">(Next Release) 2.5.0</div>
                             </div>
                         </div>
                     </div>
@@ -365,32 +365,23 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
                                                         <div class="sidebar-nav-child active">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <h2 id="core">Core</h2>
-<ul>
-<li>[Enhancement] Jobs is now included as part of Shiny codegen package</li>
-<li>[Fix] GenerateStaticClasses requires a namespace - removed optional arg on it</li>
-</ul>
-<h2 id="jobs">Jobs</h2>
-<ul>
-<li>[Fix][iOS] Fallback job manager needs to requestaccess on the ui thread <a href="https://github.com/shinyorg/shiny/pull/835">GH-835</a></li>
-</ul>
-<h2 id="bluetooth-le">Bluetooth LE</h2>
-<ul>
-<li>[Fix] Ensure write is performed for ManagedPeripheral</li>
-</ul>
-<h2 id="http-transfers">HTTP Transfers</h2>
-<ul>
-<li>[Fix][iOS] Fix line endings for file upload headers</li>
-</ul>
+                                    <h1 id="tbd">TBD</h1>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
+                                        <div class="border-bottom mb-3">
+                                            <p class="small font-weight-bold">On This Page</p>
+                                                <p class="small"><a href="#tbd">TBD</a></p>
+                                        </div>
                                     <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/nextrelease.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
@@ -401,7 +392,7 @@
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
