--- a/release-notes/v242.html
+++ b/release-notes/v242.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - Native</title>
+    <title>Shiny.NET - 2.4.2</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">Native</div>
+                                <div class="text-white m-0 title">2.4.2</div>
                             </div>
                         </div>
                     </div>
@@ -132,11 +132,11 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/push">Notifications (Push)</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/push/getting-started">Getting Started</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child active">
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/push/native">Native</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -343,7 +343,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/release-notes">Release Notes</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
@@ -365,7 +365,7 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child">
+                                                        <div class="sidebar-nav-child active">
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -374,122 +374,28 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <p>Native push is the root of all other push providers.  It works at the native OS level and is usually feeding other providers like Azure Notification Hubs and Firebase.  As such, the setup instructions found
-within this document generally apply to all.</p>
-<div class="tab-wrap">
-<input type="radio" id="2996be7a2e844e728b7b4101272c2927-3f46834dfba843f2bd60c939020f3f3b" name="2996be7a2e844e728b7b4101272c2927" class="tab" checked><label for="2996be7a2e844e728b7b4101272c2927-3f46834dfba843f2bd60c939020f3f3b" >General</label>
-<input type="radio" id="2996be7a2e844e728b7b4101272c2927-38cf40cc7a46428a815eb70d71b4d403" name="2996be7a2e844e728b7b4101272c2927" class="tab" ><label for="2996be7a2e844e728b7b4101272c2927-38cf40cc7a46428a815eb70d71b4d403" >Startup</label>
-<input type="radio" id="2996be7a2e844e728b7b4101272c2927-f87de31a8bf64f6fb9877d649bce6391" name="2996be7a2e844e728b7b4101272c2927" class="tab" ><label for="2996be7a2e844e728b7b4101272c2927-f87de31a8bf64f6fb9877d649bce6391" >Android</label>
-<input type="radio" id="2996be7a2e844e728b7b4101272c2927-98c65f43f6174da983628ae669897959" name="2996be7a2e844e728b7b4101272c2927" class="tab" ><label for="2996be7a2e844e728b7b4101272c2927-98c65f43f6174da983628ae669897959" >iOS</label>
-<input type="radio" id="2996be7a2e844e728b7b4101272c2927-7ef89dc53cf74f80bb9060bc81fc6777" name="2996be7a2e844e728b7b4101272c2927" class="tab" ><label for="2996be7a2e844e728b7b4101272c2927-7ef89dc53cf74f80bb9060bc81fc6777" >Windows</label>
-<div class="tab__content">
-<p>|Area|Info|
-|---|---|
-|Description||
-|Service|Shiny.Push.IPushManager|
-|NuGet|<a href="https://www.nuget.org/packages/Shiny.Push/" target="Shiny.Push"><img src="https://img.shields.io/nuget/v/Shiny.Push.svg?style=for-the-badge&label=Shiny.Push" /></a>|
-|Static Generated Class|ShinyPush|</p>
-</div>
-<div class="tab__content">
-<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
-using Shiny;
-
-namespace YourNamespace
-{
-    public class YourShinyStartup : ShinyStartup
-    {
-        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
-        { 
-            
-&lt;p&gt;services.UsePush&amp;lt;Shiny.Push.IPushDelegate&amp;gt;();
-services.UsePush 
-        }
-    }
-}
-</code></pre>
-</p>
-</div>
-<div class="tab__content">
-<h2>Minimum Version: 8.0</h2>
-</div>
-<div class="tab__content">
-<h2>Minimum Version: 10</h2>
-<h3>AppDelegate</h3>
-<pre><code class="language-csharp">using System;
-using Foundation;
-using Xamarin.Forms.Platform.iOS;
-using Shiny;
-<p>namespace YourIosApp
-{
-[Register(&quot;AppDelegate&quot;)]
-public partial class AppDelegate : FormsApplicationDelegate
-{
-public override bool FinishedLaunching(UIApplication app, NSDictionary options)
-{
-this.ShinyFinishedLaunching(new Samples.SampleStartup());
-global::Xamarin.Forms.Forms.Init();
-this.LoadApplication(new Samples.App());
-}
-public override void RegisteredForRemoteNotifications(UIApplication application, NSData deviceToken) =&gt; this.ShinyRegisteredForRemoteNotifications(deviceToken);
-public override void FailedToRegisterForRemoteNotifications(UIApplication application, NSError error) =&gt; this.ShinyFailedToRegisterForRemoteNotifications(error);
-public override void DidReceiveRemoteNotification(UIApplication application, NSDictionary userInfo, Action&lt;UIBackgroundFetchResult&gt; completionHandler) =&gt; this.ShinyDidReceiveRemoteNotification(userInfo, completionHandler);
-}
-}
-</code></pre></p>
-<h3>Info.plist</h3>
-<pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot; ?&gt;
-&lt;!DOCTYPE plist PUBLIC &quot; -//Apple//DTD PLIST 1.0//EN&quot; &quot;http://www.apple.com/DTDs/PropertyList-1.0.dtd&quot;&gt;
-&lt;plist version=&quot;1.0&quot;&gt;
-&lt;dict&gt;
-    &lt;key&gt;UIBackgroundModes&lt;/key&gt;
-    &lt;array&gt;
-     &lt;string&gt;remote-notification&lt;/string&gt;
-    &lt;/array&gt;
-&lt;/dict&gt;
-&lt;/plist&gt;
-</code></pre>
-<h3>Entitlements.plist</h3>
-<pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot; ?&gt;
-&lt;!DOCTYPE plist PUBLIC &quot; -//Apple//DTD PLIST 1.0//EN&quot; &quot;http://www.apple.com/DTDs/PropertyList-1.0.dtd&quot;&gt;
-&lt;plist version=&quot;1.0&quot;&gt;
-&lt;dict&gt;
-   &lt;key&gt;aps-environment&lt;/key&gt;
-   &lt;string&gt;development OR production&lt;/string&gt;
-&lt;/dict&gt;
-&lt;/plist&gt;
-</code></pre>
-</div>
-<div class="tab__content">
-<h3>Package.appxmanifest</h3>
-<pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot; ?&gt;
-&lt;Package&gt;
-    &lt;Applications&gt;
-        &lt;Extensions&gt;
-            &lt;Task Type=&quot;pushNotification&quot; /&gt;        &lt;/Extensions&gt;
-    &lt;/Applications&gt;
-&lt;/Package&gt;
-</code></pre>
-</div>
-</div>
-<h2 id="native-push-provider">Native Push Provider</h2>
-<p>If you don't intend to use a 3rd party provider, this library still uses everything applied from &quot;Getting Started&quot;.  To register it with Shiny, simply do the following in your Shiny Startup:</p>
-<pre><code class="language-csharp">services.UsePush&lt;MyPushDelegate&gt;();
-</code></pre>
-<h2 id="android-additional-setup">Android Additional Setup</h2>
-<p>The process of setting up Android is a bit of process</p>
-<pre><code class="language-csharp">&lt;ItemGroup&gt;
-    &lt;GoogleServicesJson Include=&quot;google-services.json&quot;&gt;
-        &lt;CopyToOutputDirectory&gt;PreserveNewest&lt;/CopyToOutputDirectory&gt;
-    &lt;/GoogleServicesJson&gt;
-    &lt;PackageReference Include=&quot;Xamarin.GooglePlayServices.Basement&quot; Version=&quot;The same version Shiny.Push is using&quot; /&gt;
-    &lt;PackageReference Include=&quot;Xamarin.GooglePlayServices.Tasks&quot; Version=&quot;The same version Shiny.Push is using&quot; /&gt;
-&lt;/ItemGroup&gt;
-
-</code></pre>
+                                    <h2 id="core">Core</h2>
+<ul>
+<li>[Enhancement] Jobs is now included as part of Shiny codegen package</li>
+<li>[Fix] GenerateStaticClasses requires a namespace - removed optional arg on it</li>
+</ul>
+<h2 id="jobs">Jobs</h2>
+<ul>
+<li>[Fix][iOS] Fallback job manager needs to requestaccess on the ui thread <a href="https://github.com/shinyorg/shiny/pull/835">GH-835</a></li>
+</ul>
+<h2 id="bluetooth-le">Bluetooth LE</h2>
+<ul>
+<li>[Fix] Ensure write is performed for ManagedPeripheral</li>
+<li>[Enhancement] Characteristic.WriteBlob now takes a timeout for individual packet sends</li>
+</ul>
+<h2 id="http-transfers">HTTP Transfers</h2>
+<ul>
+<li>[Fix][iOS] Fix line endings for file upload headers</li>
+</ul>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/push/native.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/v242.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
