--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -366,17 +366,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="036a1aefd1f94898ba3ed19e3faf1c7e-c67818725e8b4176a028a0011be5d97a" name="036a1aefd1f94898ba3ed19e3faf1c7e" class="tab" checked><label for="036a1aefd1f94898ba3ed19e3faf1c7e-c67818725e8b4176a028a0011be5d97a" >General</label>
-<input type="radio" id="036a1aefd1f94898ba3ed19e3faf1c7e-9e32bdb3126146eba22fc02ea69c0e8d" name="036a1aefd1f94898ba3ed19e3faf1c7e" class="tab" ><label for="036a1aefd1f94898ba3ed19e3faf1c7e-9e32bdb3126146eba22fc02ea69c0e8d" >Startup</label>
-<input type="radio" id="036a1aefd1f94898ba3ed19e3faf1c7e-7bd361375db94b78951dd27e30ed1fc0" name="036a1aefd1f94898ba3ed19e3faf1c7e" class="tab" ><label for="036a1aefd1f94898ba3ed19e3faf1c7e-7bd361375db94b78951dd27e30ed1fc0" >Android</label>
-<input type="radio" id="036a1aefd1f94898ba3ed19e3faf1c7e-09096c5eee79413d98220c47da522b86" name="036a1aefd1f94898ba3ed19e3faf1c7e" class="tab" ><label for="036a1aefd1f94898ba3ed19e3faf1c7e-09096c5eee79413d98220c47da522b86" >iOS</label>
-<input type="radio" id="036a1aefd1f94898ba3ed19e3faf1c7e-0fb10981dc2147d19c69e0d9092db595" name="036a1aefd1f94898ba3ed19e3faf1c7e" class="tab" ><label for="036a1aefd1f94898ba3ed19e3faf1c7e-0fb10981dc2147d19c69e0d9092db595" >Windows</label>
+<input type="radio" id="490854435b524bb6b4d7d61f38bf4584-e53649bee4eb4c1a977bd1c69ca4a4e9" name="490854435b524bb6b4d7d61f38bf4584" class="tab" checked><label for="490854435b524bb6b4d7d61f38bf4584-e53649bee4eb4c1a977bd1c69ca4a4e9" >General</label>
+<input type="radio" id="490854435b524bb6b4d7d61f38bf4584-5f6c8e3f2378440fa28abf48ba1fb641" name="490854435b524bb6b4d7d61f38bf4584" class="tab" ><label for="490854435b524bb6b4d7d61f38bf4584-5f6c8e3f2378440fa28abf48ba1fb641" >Startup</label>
+<input type="radio" id="490854435b524bb6b4d7d61f38bf4584-78d7cc0a450b430cb82a448b7cbcdba0" name="490854435b524bb6b4d7d61f38bf4584" class="tab" ><label for="490854435b524bb6b4d7d61f38bf4584-78d7cc0a450b430cb82a448b7cbcdba0" >Android</label>
+<input type="radio" id="490854435b524bb6b4d7d61f38bf4584-1a01e40d4aa84f39b3c463f077ab926c" name="490854435b524bb6b4d7d61f38bf4584" class="tab" ><label for="490854435b524bb6b4d7d61f38bf4584-1a01e40d4aa84f39b3c463f077ab926c" >iOS</label>
+<input type="radio" id="490854435b524bb6b4d7d61f38bf4584-478d6e5ea8ef4fda9896cbed93f070d0" name="490854435b524bb6b4d7d61f38bf4584" class="tab" ><label for="490854435b524bb6b4d7d61f38bf4584-478d6e5ea8ef4fda9896cbed93f070d0" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -426,7 +429,7 @@ namespace YourNamespace
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
