--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -366,17 +366,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="5f9957feb8ae401ea730a20c2691a33f-8f3dfcbd8df1451c9ed4fcdcac15c859" name="5f9957feb8ae401ea730a20c2691a33f" class="tab" checked><label for="5f9957feb8ae401ea730a20c2691a33f-8f3dfcbd8df1451c9ed4fcdcac15c859" >General</label>
-<input type="radio" id="5f9957feb8ae401ea730a20c2691a33f-765b1c6ee4d846899ee03e47df64f1de" name="5f9957feb8ae401ea730a20c2691a33f" class="tab" ><label for="5f9957feb8ae401ea730a20c2691a33f-765b1c6ee4d846899ee03e47df64f1de" >Startup</label>
-<input type="radio" id="5f9957feb8ae401ea730a20c2691a33f-7c239b0de79e4f82931bb398256a6abe" name="5f9957feb8ae401ea730a20c2691a33f" class="tab" ><label for="5f9957feb8ae401ea730a20c2691a33f-7c239b0de79e4f82931bb398256a6abe" >Android</label>
-<input type="radio" id="5f9957feb8ae401ea730a20c2691a33f-627c348777784bfbb2f7a11b4632b249" name="5f9957feb8ae401ea730a20c2691a33f" class="tab" ><label for="5f9957feb8ae401ea730a20c2691a33f-627c348777784bfbb2f7a11b4632b249" >iOS</label>
-<input type="radio" id="5f9957feb8ae401ea730a20c2691a33f-c38679ffda9949af99f1286d851fe085" name="5f9957feb8ae401ea730a20c2691a33f" class="tab" ><label for="5f9957feb8ae401ea730a20c2691a33f-c38679ffda9949af99f1286d851fe085" >Windows</label>
+<input type="radio" id="9122cc18b73449e6b8a730ee94f7c803-9a83c8892f5944839b6b102b8fbf96d2" name="9122cc18b73449e6b8a730ee94f7c803" class="tab" checked><label for="9122cc18b73449e6b8a730ee94f7c803-9a83c8892f5944839b6b102b8fbf96d2" >General</label>
+<input type="radio" id="9122cc18b73449e6b8a730ee94f7c803-23c9606b5033471b8885ec8abdfd97ee" name="9122cc18b73449e6b8a730ee94f7c803" class="tab" ><label for="9122cc18b73449e6b8a730ee94f7c803-23c9606b5033471b8885ec8abdfd97ee" >Startup</label>
+<input type="radio" id="9122cc18b73449e6b8a730ee94f7c803-c2b5477abdea46e387df8c969cc580f2" name="9122cc18b73449e6b8a730ee94f7c803" class="tab" ><label for="9122cc18b73449e6b8a730ee94f7c803-c2b5477abdea46e387df8c969cc580f2" >Android</label>
+<input type="radio" id="9122cc18b73449e6b8a730ee94f7c803-8dbb576bc1724333857ac99e2701a267" name="9122cc18b73449e6b8a730ee94f7c803" class="tab" ><label for="9122cc18b73449e6b8a730ee94f7c803-8dbb576bc1724333857ac99e2701a267" >iOS</label>
+<input type="radio" id="9122cc18b73449e6b8a730ee94f7c803-d87fe07c553c472eb16cc6a9cf7f169c" name="9122cc18b73449e6b8a730ee94f7c803" class="tab" ><label for="9122cc18b73449e6b8a730ee94f7c803-d87fe07c553c472eb16cc6a9cf7f169c" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -426,7 +429,7 @@ namespace YourNamespace
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
