--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -366,17 +366,20 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="dff017c6f6b94eeba4428206d02d1300-2c84ab4a7cee4dd5852b6eeefa5cbd5c" name="dff017c6f6b94eeba4428206d02d1300" class="tab" checked><label for="dff017c6f6b94eeba4428206d02d1300-2c84ab4a7cee4dd5852b6eeefa5cbd5c" >General</label>
-<input type="radio" id="dff017c6f6b94eeba4428206d02d1300-74966f7d280c4c83a82245bbde61907f" name="dff017c6f6b94eeba4428206d02d1300" class="tab" ><label for="dff017c6f6b94eeba4428206d02d1300-74966f7d280c4c83a82245bbde61907f" >Startup</label>
-<input type="radio" id="dff017c6f6b94eeba4428206d02d1300-aea5596cc2664335a863149277426169" name="dff017c6f6b94eeba4428206d02d1300" class="tab" ><label for="dff017c6f6b94eeba4428206d02d1300-aea5596cc2664335a863149277426169" >Android</label>
-<input type="radio" id="dff017c6f6b94eeba4428206d02d1300-78b2a3ef617946e3a6a5754805d503e3" name="dff017c6f6b94eeba4428206d02d1300" class="tab" ><label for="dff017c6f6b94eeba4428206d02d1300-78b2a3ef617946e3a6a5754805d503e3" >iOS</label>
-<input type="radio" id="dff017c6f6b94eeba4428206d02d1300-3e4b272397c6414cbcc1628608e1405c" name="dff017c6f6b94eeba4428206d02d1300" class="tab" ><label for="dff017c6f6b94eeba4428206d02d1300-3e4b272397c6414cbcc1628608e1405c" >Windows</label>
+<input type="radio" id="9c8655d3c1a04090ac7ab223a435d168-dc3b4ea5f34b4ac0b0293f0d14d57e01" name="9c8655d3c1a04090ac7ab223a435d168" class="tab" checked><label for="9c8655d3c1a04090ac7ab223a435d168-dc3b4ea5f34b4ac0b0293f0d14d57e01" >General</label>
+<input type="radio" id="9c8655d3c1a04090ac7ab223a435d168-2d2ee489ef8b4768a3d4dc97541933a0" name="9c8655d3c1a04090ac7ab223a435d168" class="tab" ><label for="9c8655d3c1a04090ac7ab223a435d168-2d2ee489ef8b4768a3d4dc97541933a0" >Startup</label>
+<input type="radio" id="9c8655d3c1a04090ac7ab223a435d168-0c36e2a854c54640a00bda08bbc2a0e9" name="9c8655d3c1a04090ac7ab223a435d168" class="tab" ><label for="9c8655d3c1a04090ac7ab223a435d168-0c36e2a854c54640a00bda08bbc2a0e9" >Android</label>
+<input type="radio" id="9c8655d3c1a04090ac7ab223a435d168-fb7ea85f57b44ac289e3a99d20ccd1dc" name="9c8655d3c1a04090ac7ab223a435d168" class="tab" ><label for="9c8655d3c1a04090ac7ab223a435d168-fb7ea85f57b44ac289e3a99d20ccd1dc" >iOS</label>
+<input type="radio" id="9c8655d3c1a04090ac7ab223a435d168-7e632fbad0bb425ca2d820e752560da8" name="9c8655d3c1a04090ac7ab223a435d168" class="tab" ><label for="9c8655d3c1a04090ac7ab223a435d168-7e632fbad0bb425ca2d820e752560da8" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -426,7 +429,7 @@ namespace YourNamespace
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
