--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -366,15 +366,18 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="2c7db50176c64b75930a8fc2991e32f3-6ff0306d6deb4555987beece6dca0027" name="2c7db50176c64b75930a8fc2991e32f3" class="tab" checked><label for="2c7db50176c64b75930a8fc2991e32f3-6ff0306d6deb4555987beece6dca0027" >General</label>
-<input type="radio" id="2c7db50176c64b75930a8fc2991e32f3-23da4894fe4a4bb8a717008d87c9c5a0" name="2c7db50176c64b75930a8fc2991e32f3" class="tab" ><label for="2c7db50176c64b75930a8fc2991e32f3-23da4894fe4a4bb8a717008d87c9c5a0" >Startup</label>
-<input type="radio" id="2c7db50176c64b75930a8fc2991e32f3-696d844c10cb41a388e9051c01231173" name="2c7db50176c64b75930a8fc2991e32f3" class="tab" ><label for="2c7db50176c64b75930a8fc2991e32f3-696d844c10cb41a388e9051c01231173" >Android</label>
+<input type="radio" id="655e10eb91084b989343dacc861a206e-bed875aefbe442d5af086fe2f9d5b96c" name="655e10eb91084b989343dacc861a206e" class="tab" checked><label for="655e10eb91084b989343dacc861a206e-bed875aefbe442d5af086fe2f9d5b96c" >General</label>
+<input type="radio" id="655e10eb91084b989343dacc861a206e-e59f7317149641e5a0b96dca22498890" name="655e10eb91084b989343dacc861a206e" class="tab" ><label for="655e10eb91084b989343dacc861a206e-e59f7317149641e5a0b96dca22498890" >Startup</label>
+<input type="radio" id="655e10eb91084b989343dacc861a206e-21792e4a364e40e7a97e9d7da415e629" name="655e10eb91084b989343dacc861a206e" class="tab" ><label for="655e10eb91084b989343dacc861a206e-21792e4a364e40e7a97e9d7da415e629" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -418,7 +421,7 @@ namespace YourNamespace
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
