--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -366,7 +366,10 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
+                                                            <a href="/release-notes/v242">2.4.2</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/nextrelease">(Next Release) 2.5.0</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -378,11 +381,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="0ad255b8d2204cffa002c0edd7f45052-bb3d5465f6d74f5f904af42be1f3f0ae" name="0ad255b8d2204cffa002c0edd7f45052" class="tab" checked><label for="0ad255b8d2204cffa002c0edd7f45052-bb3d5465f6d74f5f904af42be1f3f0ae" >General</label>
-<input type="radio" id="0ad255b8d2204cffa002c0edd7f45052-b2dc772d4657441b983c44102f66c0ac" name="0ad255b8d2204cffa002c0edd7f45052" class="tab" ><label for="0ad255b8d2204cffa002c0edd7f45052-b2dc772d4657441b983c44102f66c0ac" >Startup</label>
-<input type="radio" id="0ad255b8d2204cffa002c0edd7f45052-a2eb57cd54804f9fa6029ccebccce608" name="0ad255b8d2204cffa002c0edd7f45052" class="tab" ><label for="0ad255b8d2204cffa002c0edd7f45052-a2eb57cd54804f9fa6029ccebccce608" >Android</label>
-<input type="radio" id="0ad255b8d2204cffa002c0edd7f45052-131920d1e76e4b4cad3515efa29be75c" name="0ad255b8d2204cffa002c0edd7f45052" class="tab" ><label for="0ad255b8d2204cffa002c0edd7f45052-131920d1e76e4b4cad3515efa29be75c" >iOS</label>
-<input type="radio" id="0ad255b8d2204cffa002c0edd7f45052-487c7e5bb7aa4494bbae9f93eba78558" name="0ad255b8d2204cffa002c0edd7f45052" class="tab" ><label for="0ad255b8d2204cffa002c0edd7f45052-487c7e5bb7aa4494bbae9f93eba78558" >Windows</label></li>
+<input type="radio" id="1ab963dab88a4be7b2d586eac2b0e85a-d89f027ea74f4ba59e9ec0360608603e" name="1ab963dab88a4be7b2d586eac2b0e85a" class="tab" checked><label for="1ab963dab88a4be7b2d586eac2b0e85a-d89f027ea74f4ba59e9ec0360608603e" >General</label>
+<input type="radio" id="1ab963dab88a4be7b2d586eac2b0e85a-40b097ead9b64eaaa68e4001dedf599a" name="1ab963dab88a4be7b2d586eac2b0e85a" class="tab" ><label for="1ab963dab88a4be7b2d586eac2b0e85a-40b097ead9b64eaaa68e4001dedf599a" >Startup</label>
+<input type="radio" id="1ab963dab88a4be7b2d586eac2b0e85a-7be923f421d944e69524056d38a51a81" name="1ab963dab88a4be7b2d586eac2b0e85a" class="tab" ><label for="1ab963dab88a4be7b2d586eac2b0e85a-7be923f421d944e69524056d38a51a81" >Android</label>
+<input type="radio" id="1ab963dab88a4be7b2d586eac2b0e85a-dfc5290a7b4144e8998882afe1c7dc36" name="1ab963dab88a4be7b2d586eac2b0e85a" class="tab" ><label for="1ab963dab88a4be7b2d586eac2b0e85a-dfc5290a7b4144e8998882afe1c7dc36" >iOS</label>
+<input type="radio" id="1ab963dab88a4be7b2d586eac2b0e85a-4537be373e3e4ffb8bfab53cd087bf43" name="1ab963dab88a4be7b2d586eac2b0e85a" class="tab" ><label for="1ab963dab88a4be7b2d586eac2b0e85a-4537be373e3e4ffb8bfab53cd087bf43" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
@@ -486,7 +489,7 @@ namespace Samples.UWP
     <div id="footer" class="p-3 text-white font-size-sm">
         <div class="container">
             <div>
-                <span>© 2021 Shiny.NET</span>
+                <span>© 2022 Shiny.NET</span>
                 <span class="float-right" style="color: #888888;">Documentation Built by <a href="https://statiq.dev" target="statiq">Statiq</a></span>
             </div>
         </div>
